--- a/css/main.css
+++ b/css/main.css
@@ -639,27 +639,6 @@ html{
   content: attr(data-title);
 }
 
-:root .countdown{
-  line-height: 1em;
-}
-
-.countdown{
-  display: inline-flex;
-}
-
-.countdown > *{
-  height: 1em;
-  display: inline-block;
-  overflow-y: hidden;
-}
-
-.countdown > *:before{
-  position: relative;
-  content: "00\A 01\A 02\A 03\A 04\A 05\A 06\A 07\A 08\A 09\A 10\A 11\A 12\A 13\A 14\A 15\A 16\A 17\A 18\A 19\A 20\A 21\A 22\A 23\A 24\A 25\A 26\A 27\A 28\A 29\A 30\A 31\A 32\A 33\A 34\A 35\A 36\A 37\A 38\A 39\A 40\A 41\A 42\A 43\A 44\A 45\A 46\A 47\A 48\A 49\A 50\A 51\A 52\A 53\A 54\A 55\A 56\A 57\A 58\A 59\A 60\A 61\A 62\A 63\A 64\A 65\A 66\A 67\A 68\A 69\A 70\A 71\A 72\A 73\A 74\A 75\A 76\A 77\A 78\A 79\A 80\A 81\A 82\A 83\A 84\A 85\A 86\A 87\A 88\A 89\A 90\A 91\A 92\A 93\A 94\A 95\A 96\A 97\A 98\A 99\A";
-  white-space: pre;
-  top: calc(var(--value) * -1em);
-}
-
 .footer{
   display: grid;
   width: 100%;
@@ -720,6 +699,10 @@ html{
           text-decoration-line: underline;
 }
 
+.navbar-center{
+  flex-shrink: 0;
+}
+
 .swap{
   position: relative;
   display: inline-grid;
@@ -762,11 +745,6 @@ html{
   margin-right: auto;
 }
 
-.mx-3{
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -799,10 +777,6 @@ html{
   margin-top: 6rem;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
-}
-
 .flex{
   display: flex;
 }
@@ -817,6 +791,18 @@ html{
 
 .h-12{
   height: 3rem;
+}
+
+.h-8{
+  height: 2rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
+.w-32{
+  width: 8rem;
 }
 
 .w-14{
@@ -902,6 +888,18 @@ html{
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-9 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -912,6 +910,15 @@ html{
 
 .border-2{
   border-width: 2px;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-lightBlue{
+  --tw-border-opacity: 1;
+  border-color: rgb(7 119 161 / var(--tw-border-opacity));
 }
 
 .bg-lightBlue{
@@ -964,6 +971,11 @@ html{
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-2{
@@ -1065,6 +1077,16 @@ html{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.hover\:bg-blue-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .hover\:text-lightGray:hover{
   color: rgba(0, 0, 0, 0.7);
 }
@@ -1075,8 +1097,16 @@ html{
 }
 
 @media (min-width: 480px){
+  .sm\:mb-1{
+    margin-bottom: 0.25rem;
+  }
+
   .sm\:mt-5{
     margin-top: 1.25rem;
+  }
+
+  .sm\:mt-11{
+    margin-top: 2.75rem;
   }
 
   .sm\:items-center{
@@ -1178,6 +1208,14 @@ html{
 
   .lg\:mr-5{
     margin-right: 1.25rem;
+  }
+
+  .lg\:mb-8{
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mt-0{
+    margin-top: 0px;
   }
 
   .lg\:p-11{
