--- a/css/main.css
+++ b/css/main.css
@@ -521,15 +521,15 @@ html{
   width: 100%;
 }
 
-@media (min-width: 720px){
+@media (min-width: 320px){
   .container{
-    max-width: 720px;
+    max-width: 320px;
   }
 }
 
-@media (min-width: 768px){
+@media (min-width: 760px){
   .container{
-    max-width: 768px;
+    max-width: 760px;
   }
 }
 
@@ -639,27 +639,6 @@ html{
   content: attr(data-title);
 }
 
-:root .countdown{
-  line-height: 1em;
-}
-
-.countdown{
-  display: inline-flex;
-}
-
-.countdown > *{
-  height: 1em;
-  display: inline-block;
-  overflow-y: hidden;
-}
-
-.countdown > *:before{
-  position: relative;
-  content: "00\A 01\A 02\A 03\A 04\A 05\A 06\A 07\A 08\A 09\A 10\A 11\A 12\A 13\A 14\A 15\A 16\A 17\A 18\A 19\A 20\A 21\A 22\A 23\A 24\A 25\A 26\A 27\A 28\A 29\A 30\A 31\A 32\A 33\A 34\A 35\A 36\A 37\A 38\A 39\A 40\A 41\A 42\A 43\A 44\A 45\A 46\A 47\A 48\A 49\A 50\A 51\A 52\A 53\A 54\A 55\A 56\A 57\A 58\A 59\A 60\A 61\A 62\A 63\A 64\A 65\A 66\A 67\A 68\A 69\A 70\A 71\A 72\A 73\A 74\A 75\A 76\A 77\A 78\A 79\A 80\A 81\A 82\A 83\A 84\A 85\A 86\A 87\A 88\A 89\A 90\A 91\A 92\A 93\A 94\A 95\A 96\A 97\A 98\A 99\A";
-  white-space: pre;
-  top: calc(var(--value) * -1em);
-}
-
 .footer{
   display: grid;
   width: 100%;
@@ -680,6 +659,21 @@ html{
   .footer-center{
     grid-auto-flow: row dense;
   }
+}
+
+.form-control{
+  display: flex;
+  flex-direction: column;
+}
+
+.label{
+  display: flex;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero{
@@ -716,6 +710,16 @@ html{
 
 .link{
   cursor: pointer;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.link-hover{
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.link-hover:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
@@ -761,6 +765,22 @@ html{
   border-radius: var(--rounded-box, 1rem);
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -798,6 +818,10 @@ html{
   margin-top: 6rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
 .flex{
   display: flex;
 }
@@ -814,20 +838,16 @@ html{
   height: 3rem;
 }
 
-.h-8{
-  height: 2rem;
-}
-
-.w-72{
-  width: 18rem;
-}
-
-.w-32{
-  width: 8rem;
-}
-
 .w-14{
   width: 3.5rem;
+}
+
+.w-80{
+  width: 20rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .max-w-xl{
@@ -853,6 +873,10 @@ html{
 
 .flex-col-reverse{
   flex-direction: column-reverse;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -937,9 +961,9 @@ html{
   border-width: 1px;
 }
 
-.border-lightBlue{
+.border-darkBlue{
   --tw-border-opacity: 1;
-  border-color: rgb(7 119 161 / var(--tw-border-opacity));
+  border-color: rgb(23 15 73 / var(--tw-border-opacity));
 }
 
 .bg-lightBlue{
@@ -994,11 +1018,6 @@ html{
   padding-right: 1.25rem;
 }
 
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1018,6 +1037,10 @@ html{
 
 .pt-16{
   padding-top: 4rem;
+}
+
+.pr-16{
+  padding-right: 4rem;
 }
 
 .text-left{
@@ -1092,6 +1115,11 @@ html{
   color: rgb(7 119 161 / var(--tw-text-opacity));
 }
 
+.text-darkBlue{
+  --tw-text-opacity: 1;
+  color: rgb(23 15 73 / var(--tw-text-opacity));
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1103,9 +1131,9 @@ html{
   outline-offset: 2px;
 }
 
-.hover\:bg-blue-500:hover{
+.hover\:bg-darkBlue:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(23 15 73 / var(--tw-bg-opacity));
 }
 
 .hover\:text-lightGray:hover{
@@ -1117,45 +1145,59 @@ html{
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-@media (min-width: 720px){
+.hover\:text-darkBlue:hover{
+  --tw-text-opacity: 1;
+  color: rgb(23 15 73 / var(--tw-text-opacity));
+}
+
+@media (min-width: 320px){
+  .sm\:left-11{
+    left: 2.75rem;
+  }
+
   .sm\:mb-1{
     margin-bottom: 0.25rem;
+  }
+
+  .sm\:ml-56{
+    margin-left: 14rem;
   }
 
   .sm\:mt-5{
     margin-top: 1.25rem;
   }
 
+  .sm\:mb-5{
+    margin-bottom: 1.25rem;
+  }
+
   .sm\:mt-11{
     margin-top: 2.75rem;
   }
 
-  .sm\:mb-5{
-    margin-bottom: 1.25rem;
+  .sm\:h-10{
+    height: 2.5rem;
+  }
+
+  .sm\:w-20{
+    width: 5rem;
+  }
+
+  .sm\:w-80{
+    width: 20rem;
   }
 
   .sm\:items-center{
     align-items: center;
   }
 
-  .sm\:space-y-9 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+  .sm\:p-5{
+    padding: 1.25rem;
   }
 
-  .sm\:p-6{
-    padding: 1.5rem;
-  }
-
-  .sm\:px-6{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .sm\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .sm\:text-left{
@@ -1166,28 +1208,70 @@ html{
     text-align: center;
   }
 
-  .sm\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
-  .sm\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
+  .sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
-@media (min-width: 768px){
+@media (min-width: 760px){
+  .md\:left-11{
+    left: 2.75rem;
+  }
+
+  @media (min-width: 760px){
+    .md\:md\:left-11{
+      left: 2.75rem;
+    }
+  }
+
+  .md\:mt-1{
+    margin-top: 0.25rem;
+  }
+
+  .md\:ml-60{
+    margin-left: 15rem;
+  }
+
+  .md\:mt-2{
+    margin-top: 0.5rem;
+  }
+
+  .md\:mt-1\.5{
+    margin-top: 0.375rem;
+  }
+
   .md\:flex{
     display: flex;
+  }
+
+  .md\:h-10{
+    height: 2.5rem;
+  }
+
+  .md\:h-8{
+    height: 2rem;
   }
 
   .md\:w-1\/2{
     width: 50%;
   }
 
+  .md\:w-20{
+    width: 5rem;
+  }
+
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-96{
+    width: 24rem;
   }
 
   .md\:flex-row{
@@ -1214,8 +1298,17 @@ html{
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:p-4{
-    padding: 1rem;
+  .md\:p-5{
+    padding: 1.25rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:pr-4{
+    padding-right: 1rem;
   }
 
   .md\:pt-0{
@@ -1224,16 +1317,6 @@ html{
 
   .md\:text-left{
     text-align: left;
-  }
-
-  .md\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .md\:text-5xl{
@@ -1259,24 +1342,6 @@ html{
     margin-top: 0px;
   }
 
-  .lg\:p-11{
-    padding: 2.75rem;
-  }
-
-  .lg\:p-8{
-    padding: 2rem;
-  }
-
-  .lg\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .lg\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .lg\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -1286,7 +1351,13 @@ html{
     padding-right: 1rem;
   }
 
-  .lg\:pr-6{
-    padding-right: 1.5rem;
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 }
