--- a/css/main.css
+++ b/css/main.css
@@ -822,6 +822,26 @@ html{
   margin-bottom: 1.25rem;
 }
 
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mb-7{
+  margin-bottom: 1.75rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-1\.5{
+  margin-top: 0.375rem;
+}
+
 .flex{
   display: flex;
 }
@@ -848,6 +868,14 @@ html{
 
 .w-full{
   width: 100%;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .max-w-xl{
@@ -945,12 +973,51 @@ html{
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-r{
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
 }
 
 .border-2{
@@ -986,8 +1053,18 @@ html{
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-lightGray{
-  background-color: rgba(0, 0, 0, 0.7);
+.bg-darkBlack{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+}
+
+.bg-transparent{
+  background-color: transparent;
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-5{
@@ -996,6 +1073,26 @@ html{
 
 .p-6{
   padding: 1.5rem;
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-7{
+  padding: 1.75rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.p-2{
+  padding: 0.5rem;
 }
 
 .px-14{
@@ -1023,6 +1120,36 @@ html{
   padding-right: 0.5rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1041,6 +1168,18 @@ html{
 
 .pr-16{
   padding-right: 4rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pb-7{
+  padding-bottom: 1.75rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .text-left{
@@ -1120,6 +1259,16 @@ html{
   color: rgb(23 15 73 / var(--tw-text-opacity));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1136,6 +1285,35 @@ html{
   background-color: rgb(23 15 73 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-transparent:hover{
+  background-color: transparent;
+}
+
+.hover\:bg-blue-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-400:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-lightBlue:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 119 161 / var(--tw-bg-opacity));
+}
+
 .hover\:text-lightGray:hover{
   color: rgba(0, 0, 0, 0.7);
 }
@@ -1145,9 +1323,9 @@ html{
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.hover\:text-darkBlue:hover{
+.hover\:text-lightBlue:hover{
   --tw-text-opacity: 1;
-  color: rgb(23 15 73 / var(--tw-text-opacity));
+  color: rgb(7 119 161 / var(--tw-text-opacity));
 }
 
 @media (min-width: 320px){
@@ -1224,26 +1402,12 @@ html{
     left: 2.75rem;
   }
 
-  @media (min-width: 760px){
-    .md\:md\:left-11{
-      left: 2.75rem;
-    }
-  }
-
   .md\:mt-1{
     margin-top: 0.25rem;
   }
 
   .md\:ml-60{
     margin-left: 15rem;
-  }
-
-  .md\:mt-2{
-    margin-top: 0.5rem;
-  }
-
-  .md\:mt-1\.5{
-    margin-top: 0.375rem;
   }
 
   .md\:flex{
@@ -1266,12 +1430,12 @@ html{
     width: 5rem;
   }
 
-  .md\:w-1\/3{
-    width: 33.333333%;
-  }
-
   .md\:w-96{
     width: 24rem;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
 
   .md\:flex-row{
@@ -1340,6 +1504,10 @@ html{
 
   .lg\:mt-0{
     margin-top: 0px;
+  }
+
+  .lg\:flex{
+    display: flex;
   }
 
   .lg\:px-5{
