--- a/css/main.css
+++ b/css/main.css
@@ -539,12 +539,6 @@ html{
   }
 }
 
-@media (min-width: 1440px){
-  .container{
-    max-width: 1440px;
-  }
-}
-
 .avatar.placeholder > div{
   display: flex;
   align-items: center;
@@ -714,6 +708,73 @@ html{
           text-decoration-line: underline;
 }
 
+.menu{
+  display: flex;
+  flex-direction: column;
+}
+
+.menu.horizontal{
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.menu.horizontal :where(li){
+  flex-direction: row;
+}
+
+.menu :where(li){
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+.menu :where(li:not(.menu-title)) > :where(*:not(ul)){
+  display: flex;
+}
+
+.menu :where(li:not(.disabled):not(.menu-title)) > :where(*:not(ul)){
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  align-items: center;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.menu > :where(li > *:not(ul):focus){
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.menu > :where(li.disabled > *:not(ul):focus){
+  cursor: auto;
+}
+
+.menu > :where(li) :where(ul){
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.menu > :where(li) > :where(ul){
+  position: absolute;
+  display: none;
+  top: initial;
+  left: 100%;
+}
+
+.menu > :where(li:hover) > :where(ul){
+  display: flex;
+}
+
+.menu > :where(li:focus) > :where(ul){
+  display: flex;
+}
+
 .navbar-center{
   flex-shrink: 0;
 }
@@ -755,6 +816,10 @@ html{
   border-radius: var(--rounded-box, 1rem);
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -763,17 +828,49 @@ html{
   position: relative;
 }
 
+.bottom-12{
+  bottom: 3rem;
+}
+
+.left-16{
+  left: 4rem;
+}
+
 .top-0{
   top: 0px;
+}
+
+.left-6{
+  left: 1.5rem;
+}
+
+.right-6{
+  right: 1.5rem;
+}
+
+.right-14{
+  right: 3.5rem;
 }
 
 .right-0{
   right: 0px;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mt-11{
+  margin-top: 2.75rem;
 }
 
 .ml-9{
@@ -792,28 +889,28 @@ html{
   margin-bottom: 1.5rem;
 }
 
-.mt-11{
-  margin-top: 2.75rem;
-}
-
-.mb-14{
-  margin-bottom: 3.5rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
-}
-
 .mt-1{
   margin-top: 0.25rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mb-5{
   margin-bottom: 1.25rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.block{
+  display: block;
 }
 
 .flex{
@@ -836,12 +933,16 @@ html{
   width: 3.5rem;
 }
 
-.w-80{
-  width: 20rem;
-}
-
 .w-full{
   width: 100%;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-80{
+  width: 20rem;
 }
 
 .max-w-xl{
@@ -885,16 +986,34 @@ html{
   gap: 1.5rem;
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
 .space-x-11 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2.75rem * var(--tw-space-x-reverse));
   margin-left: calc(2.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -903,22 +1022,16 @@ html{
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-0 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-9 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-10 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -933,22 +1046,8 @@ html{
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-8 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+.self-end{
+  align-self: flex-end;
 }
 
 .rounded-full{
@@ -963,12 +1062,12 @@ html{
   border-radius: 0.375rem;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-darkBlue{
@@ -981,6 +1080,16 @@ html{
   background-color: rgb(7 119 161 / var(--tw-bg-opacity));
 }
 
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-countPink{
   --tw-bg-opacity: 1;
   background-color: rgb(255 121 144 / var(--tw-bg-opacity));
@@ -991,46 +1100,25 @@ html{
   background-color: rgb(234 234 234 / var(--tw-bg-opacity));
 }
 
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .bg-darkBlack{
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
-}
-
-.p-5{
-  padding: 1.25rem;
 }
 
 .p-6{
   padding: 1.5rem;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
 .p-10{
   padding: 2.5rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .px-14{
@@ -1048,6 +1136,39 @@ html{
   padding-right: 3rem;
 }
 
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pb-0{
+  padding-bottom: 0px;
+}
+
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1056,20 +1177,16 @@ html{
   padding-bottom: 0.5rem;
 }
 
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-16{
-  padding-top: 4rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .pr-16{
   padding-right: 4rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .text-left{
@@ -1088,16 +1205,6 @@ html{
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1108,8 +1215,14 @@ html{
   line-height: 1.25rem;
 }
 
-.font-medium{
-  font-weight: 500;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold{
@@ -1120,13 +1233,41 @@ html{
   font-weight: 600;
 }
 
-.text-lightGray{
-  color: rgba(0, 0, 0, 0.7);
+.font-normal{
+  font-weight: 400;
+}
+
+.leading-9{
+  line-height: 2.25rem;
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .text-lightAsh{
   --tw-text-opacity: 1;
   color: rgb(234 234 234 / var(--tw-text-opacity));
+}
+
+.text-lightGray{
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.text-darkBlue{
+  --tw-text-opacity: 1;
+  color: rgb(23 15 73 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-neutral-content{
@@ -1139,29 +1280,14 @@ html{
   color: rgb(7 119 161 / var(--tw-text-opacity));
 }
 
-.text-darkBlue{
-  --tw-text-opacity: 1;
-  color: rgb(23 15 73 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1170,14 +1296,14 @@ html{
   outline-offset: 2px;
 }
 
+.drop-shadow-md{
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .hover\:bg-darkBlue:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(23 15 73 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-lightBlue:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(7 119 161 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-600:hover{
@@ -1185,9 +1311,13 @@ html{
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+.hover\:bg-lightBlue:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 119 161 / var(--tw-bg-opacity));
+}
+
+.hover\:text-lightGray:hover{
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hover\:text-lightBlue:hover{
@@ -1195,13 +1325,67 @@ html{
   color: rgb(7 119 161 / var(--tw-text-opacity));
 }
 
-.hover\:text-lightGray:hover{
-  color: rgba(0, 0, 0, 0.7);
+.hover\:opacity-10:hover{
+  opacity: 0.1;
+}
+
+.hover\:opacity-5:hover{
+  opacity: 0.05;
+}
+
+.hover\:opacity-0:hover{
+  opacity: 0;
+}
+
+.hover\:opacity-25:hover{
+  opacity: 0.25;
+}
+
+.hover\:opacity-40:hover{
+  opacity: 0.4;
+}
+
+.hover\:opacity-50:hover{
+  opacity: 0.5;
+}
+
+.hover\:opacity-60:hover{
+  opacity: 0.6;
+}
+
+.hover\:opacity-70:hover{
+  opacity: 0.7;
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 @media (min-width: 320px){
-  .sm\:left-11{
-    left: 2.75rem;
+  .sm\:right-2{
+    right: 0.5rem;
+  }
+
+  .sm\:bottom-1{
+    bottom: 0.25rem;
+  }
+
+  .sm\:bottom-10{
+    bottom: 2.5rem;
+  }
+
+  .sm\:bottom-11{
+    bottom: 2.75rem;
+  }
+
+  .sm\:left-48{
+    left: 12rem;
+  }
+
+  .sm\:mx-9{
+    margin-left: 2.25rem;
+    margin-right: 2.25rem;
   }
 
   .sm\:mb-1{
@@ -1212,16 +1396,28 @@ html{
     margin-left: 14rem;
   }
 
-  .sm\:mt-5{
-    margin-top: 1.25rem;
-  }
-
   .sm\:mb-5{
     margin-bottom: 1.25rem;
   }
 
-  .sm\:mt-11{
-    margin-top: 2.75rem;
+  .sm\:mb-20{
+    margin-bottom: 5rem;
+  }
+
+  .sm\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .sm\:mb-12{
+    margin-bottom: 3rem;
+  }
+
+  .sm\:mt-5{
+    margin-top: 1.25rem;
+  }
+
+  .sm\:mb-6{
+    margin-bottom: 1.5rem;
   }
 
   .sm\:h-10{
@@ -1236,17 +1432,43 @@ html{
     width: 20rem;
   }
 
+  .sm\:w-auto{
+    width: auto;
+  }
+
+  .sm\:w-36{
+    width: 9rem;
+  }
+
+  .sm\:w-64{
+    width: 16rem;
+  }
+
+  .sm\:w-2\/4{
+    width: 50%;
+  }
+
   .sm\:items-center{
     align-items: center;
   }
 
-  .sm\:p-5{
-    padding: 1.25rem;
+  .sm\:gap-3{
+    gap: 0.75rem;
   }
 
   .sm\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .sm\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .sm\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .sm\:text-left{
@@ -1262,15 +1484,33 @@ html{
     line-height: 2rem;
   }
 
-  .sm\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 @media (min-width: 760px){
-  .md\:left-11{
-    left: 2.75rem;
+  .md\:right-12{
+    right: 3rem;
+  }
+
+  .md\:bottom-9{
+    bottom: 2.25rem;
+  }
+
+  .md\:left-12{
+    left: 3rem;
   }
 
   .md\:mt-1{
@@ -1281,8 +1521,28 @@ html{
     margin-left: 15rem;
   }
 
+  .md\:mr-6{
+    margin-right: 1.5rem;
+  }
+
+  .md\:mb-12{
+    margin-bottom: 3rem;
+  }
+
+  .md\:mb-7{
+    margin-bottom: 1.75rem;
+  }
+
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+
   .md\:flex{
     display: flex;
+  }
+
+  .md\:hidden{
+    display: none;
   }
 
   .md\:h-10{
@@ -1291,10 +1551,6 @@ html{
 
   .md\:h-8{
     height: 2rem;
-  }
-
-  .md\:w-1\/2{
-    width: 50%;
   }
 
   .md\:w-20{
@@ -1307,6 +1563,18 @@ html{
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
+  .md\:w-72{
+    width: 18rem;
+  }
+
+  .md\:w-10{
+    width: 2.5rem;
   }
 
   .md\:flex-row{
@@ -1327,14 +1595,14 @@ html{
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]){
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:p-5{
-    padding: 1.25rem;
+  .md\:p-4{
+    padding: 1rem;
   }
 
   .md\:px-8{
@@ -1354,49 +1622,57 @@ html{
     text-align: left;
   }
 
-  .md\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 @media (min-width: 976px){
-  .lg\:ml-5{
-    margin-left: 1.25rem;
+  .lg\:right-32{
+    right: 8rem;
   }
 
-  .lg\:mr-5{
-    margin-right: 1.25rem;
+  .lg\:mb-7{
+    margin-bottom: 1.75rem;
   }
 
-  .lg\:mb-8{
-    margin-bottom: 2rem;
-  }
-
-  .lg\:mt-0{
-    margin-top: 0px;
+  .lg\:mb-6{
+    margin-bottom: 1.5rem;
   }
 
   .lg\:flex{
     display: flex;
   }
 
-  .lg\:px-5{
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+  .lg\:w-80{
+    width: 20rem;
   }
 
-  .lg\:pr-4{
-    padding-right: 1rem;
+  .lg\:p-8{
+    padding: 2rem;
   }
 
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:p-6{
+    padding: 1.5rem;
   }
 
-  .lg\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
+  .lg\:p-7{
+    padding: 1.75rem;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
